pmd: start checking PreserveStackTrace